changed main bg color, fixed some alignment

--- a/portfolio/src/components/componentCSS/introduction.css
+++ b/portfolio/src/components/componentCSS/introduction.css
@@ -20,7 +20,7 @@ p {
 .skillSec {
   display: flex;
   margin: 1.7rem;
-  justify-content: center;
+  justify-content: left;
 }
 
 .skillSec p {
